# learning-graphics

./: Cargo.toml  Cargo.toml~  README.org  bizcat.tga  questions.org
src/: main.rs  math.rs  math.rs~
src/gfx/: bitmaps.rs  colors.rs  font.rs  load_tga.rs  mod.rs  model_loading.rs  primitives.rs  render_2d.rs  render_3d.rs
